@@ -159,6 +159,14 @@ Version 2.1-40 (closed December 12, 2013)
 	sure. Also fixed handling of tied values in assessing the P-values
 	in vectorfit.
 
+	* nestednodf: vegan 2.1-36 (release 2.0-10) changed the function
+	so that weighted analysis of binary data was equal to unweighted
+	binary analysis, but this broke consinstency with the original
+	software and publication by Almeida-Neto & Ulrich. The fix was now
+	made optional, and the default is to follow published method by
+	adding argument 'wbinary' (defaults FALSE). Based on the
+	suggestion by Matt Barbour in GitHub.
+
 	* ordispider: can now use spatial medians as centres instead of
 	the default centroids. The kind of centre is defined by new
 	argument 'spiders'.
